--- a/Ex01.md
+++ b/Ex01.md
@@ -1,7 +1,7 @@
 # Ex. No : 1	
 ## CONVERSION OF NON-DETERMINISTIC FINITE AUTOMATON (NFA) TO DETERMINISTIC FINITE AUTOMATON (DFA)
-## Register Number :
-## Date : 
+## Register Number : 212222040118
+## Date : 08.02.2024
 
 ## AIM   
 To write a C program for Conversion of Non-Deterministic Finite Automaton (NFA) To Deterministic Finite Automaton (DFA).
@@ -18,7 +18,7 @@ Step 4 : Do repeat Step 2 and Step 3 until no new state present in DFA transitio
 Step 5 : Mark the states of DFA which contains final state of NFA as final states of DFA.
 
 ## PROGRAM
-
+```
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -286,8 +286,9 @@ int main() {
  
   return 0;
 }
-
+```
 ## OUTPUT 
+![image](https://github.com/KISHOREM04/19CS409-Compiler-Design-Lab/assets/119404643/aa5194c4-8347-4868-a87b-a9e73ebfab86)
 
 ## RESULT
 Program to convert NFA to DFA has been implemented.
