--- a/Ex11.md
+++ b/Ex11.md
@@ -1,7 +1,7 @@
 # Ex. No : 11	
 # IMPLEMENTATION OF CALCULATOR USING LEX AND YACC 
-## Register Number :
-## Date : 
+## Register Number : 212222040118
+## Date : 18.04.2024
 
 ## AIM   
 To implement a calculator using LEX and YACC.
@@ -17,9 +17,111 @@ To implement a calculator using LEX and YACC.
 8.	Enter an expression as input and it is evaluated and the answer is displayed as output.
 
 ## PROGRAM
+exp11.l
+```
+%{ 
+/* Definition section */
+#include<stdlib.h>
+#include "y.tab.h"
+extern int yylval;
+%} 
 
+/* Rule Section */
+%% 
+[0-9]+ { 
+		yylval=atoi(yytext); 
+		return NUMBER; 
+
+	} 
+'<=' return LE;
+'>=' return GE;
+'!=' return NE;
+'==' return EQ;
+[\t] ; 
+[\n] return 0; 
+
+. return yytext[0]; 
+%% 
+
+```
+exp11.y
+```
+%{ 
+   /* Definition section */
+  #include<stdio.h> 
+  int flag=0; 
+%} 
+  
+%token NAME NUMBER 
+
+%left GE LE EQ NE EE '<' '>'
+
+%left '+' '-'
+  
+%left '*' '/' '%'
+  
+%left '(' ')'
+
+%nonassoc UMINUS
+/* Rule Section */
+%% 
+  
+ArithmeticExpression: E{ 
+  
+         printf("Result=%d", $$); 
+  
+         return 0; 
+  
+        }; 
+ E:E '+' E {$$=$1+$3;} 
+  
+ |E '-' E {$$=$1-$3;} 
+  
+ |E '*' E {$$=$1*$3;} 
+  
+ |E '/' E {$$=$1/$3;} 
+  
+ |E '%' E {$$=$1%$3;} 
+  
+ |'(' E ')' {$$=$2;} 
+  
+ | NUMBER {$$=$1;} 
+
+ |E GE E {$$=$1 >= $3 ;} 
+
+ |E LE E {$$=$1 <= $3 ;}
+
+ |E NE E {$$=$1 != $3 ;} 
+ 
+ |E EE E {$$=$1 == $3 ;} 
+
+ |UMINUS E {$$=-$1 ;}
+ ; 
+  
+%% 
+  
+//driver code 
+int main() 
+{ 
+   //printf("\nEnter the Expression:\n"); 
+   yyparse(); 
+   //if(flag==0) 
+   //printf("\nEntered arithmetic expression is Valid\n\n"); 
+//    return 0;
+} 
+  
+int yyerror() 
+{ 
+//    printf("\nEntered arithmetic expression is Invalid\n\n"); 
+//    flag=1; 
+} 
+int yywrap(){
+    return 1;
+}
+```
 
 ## OUTPUT 
+![image](https://github.com/KISHOREM04/19CS409-Compiler-Design-Lab/assets/119404643/06a292d4-2126-4628-bd1a-51e03c173802)
 
 ## RESULT
 The calculator is implemented using LEX and YACC and the output is verified.
